add bash line on iAnnotateSV.sh, fix bug in vcfctedits and fixed ssh option of submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "iAnnotateSV"]
 	path = iAnnotateSV
-	url = git@github.com:rhshah/iAnnotateSV.git
+	url = https://github.com/rhshah/iAnnotateSV.git
 	ignore = dirty
